# ECE275-personal

Project_0/: CMakeLists.txt  README.txt
Project_0/src/: CMakeLists.txt  item.c  item.h  main.c  testItem.c  testItem.h
Project_10/: CMakeLists.txt  README.md
Project_10/src/: CMakeLists.txt  GPSPosition.cpp  GPSPosition.h  Velociplotter.cpp  Velociplotter.h  main.cpp  testEndToEnd.cpp  testEndToEnd.h
Project_10/test_files/: input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input7.txt  input8.txt  input9.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output7.txt  output8.txt  output9.txt
Project_2/: README.md
Project_2/src/: main.c  sporkProfileEndToEndTest.c  sporkProfileEndToEndTest.h  sporkProfileTest.c  sporkProfileTest.h  sporkprofile.c
Project_2/test_files/: output1.txt  test1.txt  test8.txt
Project_3/: CMakeLists.txt  README.md
Project_3/src/: CMakeLists.txt  sporkProfileTest.c  sporkprofile.c  sporkprofile.h
Project_3/test_files/: README.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test9.txt
Project_4/: CMakeLists.txt  README.md
Project_4/src/: CMakeLists.txt  CarSimulator.cpp  CarSimulator.h  Command.cpp  Command.h  State.cpp  State.h  main.cpp  testCommand.cpp  testCommand.h  testEndToEnd.cpp  testEndToEnd.h  testState.cpp  testState.h
Project_4/test_files/: input1.txt  (+14 more)
Project_6/: CMakeLists.txt  README.md
Project_8/: CMakeLists.txt  README.md
Project_9/: CMakeLists.txt  README.md
(+97 files in other folders)
